<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:adjustViewBounds="true"
        android:src="@drawable/logo"
        />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/welcome_to_nasa_api_main_page"
        android:textSize="35sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/photo_of_rovers_main_page"
        android:textSize="20sp"
        android:id="@+id/buttonPhotos"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/nasa_observatory_main_page"
        android:textSize="17sp"
        android:id="@+id/nasa_observatory"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:text="@string/setting_title_main_page"
        android:textSize="20sp"
        android:id="@+id/buttonStarMap"/>
</LinearLayout>